# aerial-conversion

./: .gitignore  .pre-commit-config.yaml  README.md  coco2geojson.py  download_raster.py  draft.ipynb  genindex.html  geojson2coco.py  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  sa1.py  scripts.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: update_docs.yml
_modules/aerial_conversion/: coco.html  tiles.html
_modules/scripts/: batch_geojson2coco.html  coco2geojson.html  geojson2coco.html
_sources/: index.rst.txt
aerial-conversion/data/: GSU_grid_100tiles.geojson
aerial-conversion/doc/: aerial_conversion.rst
aerial-conversion/drafts/: geojson2coco.ipynb
aerial_annotation/: requirements.txt  utils.py
aerial_conversion/: README.md  coco.py  coordinates.py  pyproject.toml  requirements.txt  tiles.py
aerial_conversion/doc/: conf.py
aerial_conversion/drafts/: refactored_batch_geojson2coco.py
aerial_conversion/orthogonalise/: orthogonalise.py
aerial_conversion/scripts/: batch_geojson2coco.py
aigis_convert/: Dockerfile.py39  README.md
data/: osm_columns.csv
doc/: scripts.rst
doc/_build/doctrees/: aerial_conversion.doctree  aerial_conversion.orthogonalise.doctree  environment.pickle  index.doctree  modules.doctree  scripts.doctree
doc/_build/html/: .buildinfo  aerial_conversion.html  aerial_conversion.orthogonalise.html  genindex.html  index.html  (+3 more)
docs/: aerial_conversion.html  aerial_conversion.orthogonalise.html  aerial_conversion.orthogonalise.rst  aerial_conversion.rst  conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  py-modindex.html  scripts.html  scripts.rst
docs/_modules/: index.html
docs/source/: conf.py  index.rst
docs_source/: conf.py  requirements.txt
draft/: draft.ipynb  osm_cleaner.py  sa1images10_20.txt  sa1images20_30.txt  sa1images30_40.txt  sa1images40_50.txt  sa1images50.txt
drafts/: geojson2coco.ipynb  refactored_batch_geojson2coco.py
libs/: __init__.py  coco.py  coordinates.py  geojson.py  tiles.py  utils.py
scripts/: batch_geojson2coco.py  coco2geojson.py  coco_balance.py  geojson2coco.py  get_raster_jpeg.py  jpeg2tiff.py  make_mask.py  osm_cleaner.py
(+44 files in other folders)
