[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aerial_conversion"
authors = [
    {name = "Henry Lydecker", email = "henry.lydecker@sydney.edu.au"},
    {name = "Sahand Vahidnia", email = "sahand.vahidnia@sydney.edu.au"},
    {name = "Xinwei Luo", email = "xinwei.luo@sydney.edu.au"},
    {name = "Thomas Mauch", email = "thomas.mauch@sydney.edu.au"},
]
description = "Data interchange utilities for going from geospatial data formats to computer vision formats and back"
readme = "README.md"
version = "1.2.0""
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Sydney-Informatics-Hub/aerial-conversion"
"Bug Tracker" = "https://github.com/Sydney-Informatics-Hub/aerial-conversion/issues"
"Documentation" = "https://github.com/Sydney-Informatics-Hub/aerial-conversion/tree/main/docs/_build/html/index.html"

[project.scripts]
batch_geojson2coco = "aerial_conversion.scripts.batch_geojson2coco:main"
coco2geojson = "aerial_conversion.scripts.coco2geojson:main"
geojson2coco = "aerial_conversion.scripts.geojson2coco:main"

[tool.setuptools]
packages = ["aerial_conversion", "aerial_conversion.scripts"]

[tool.setuptools.package-dir]
aerial_conversion = "aerial_conversion"
"aerial_conversion.scripts" = "scripts"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"
