[metadata]
name = aerial-conversion
version = 1.2.0
author = SIH
author_email = sih.info@sydney.edu.au
description = PIPE-3956: Aerial segmentation: aerial-conversion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sydney-Informatics-Hub/aerial-conversion
project_urls =
    Bug Tracker = https://github.com/Sydney-Informatics-Hub/aerial-conversion/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[flake8]
ignore = E501, W503, E203, E265

[isort]
profile = black
